Some style fixes. Should fix #1261 and #1675.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1833 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/report.css
+++ b/htdocs/css/report.css
@@ -38,7 +38,7 @@ h2 {
 .tickets thead th { text-transform: capitalize }
 .tickets tbody td, .reports tbody td { padding: .1em .5em !important }
 .tickets tbody td a, .reports tbody td a { border-bottom: none }
-.tickets tbody td.ticket :link, .tickets tbody td.ticket :visited {
+.tickets tbody td.id :link, .tickets tbody td.id :visited {
  font-weight: bold;
 }
 .tickets tbody tr:hover { background: #eed; color: #000 }
