* Make line numbers links to the corresponding line. Closes #1798.  * Fix rendering of lines that start with a single space, and have been marked up with HTML tags for highlighting.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1974 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/code.css
+++ b/htdocs/css/code.css
@@ -30,6 +30,14 @@ table.code-block tbody th {
  text-align: right;
  vertical-align: top;
 }
+table.code-block tbody th :link, table.code-block tbody th :visited {
+ border: none;
+ color: #886;
+ text-decoration: none;
+}
+table.code-block tbody th :link:hover, table.code-block tbody th :visited:hover {
+ color: #000;
+}
 table.code-block tbody td {
  background: #fff;
  font: normal 11px monospace;
