Improve the design of the option for replacing existing attachments.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1975 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -300,6 +300,7 @@ table.wiki td { border: 1px solid #ccc;  padding: .1em .25em; }
 #attachment label { padding-left: .2em }
 #attachment fieldset { margin-top: 2em }
 #attachment fieldset .field { float: left; margin: 0 1em .5em 0 }
+#attachment .options { float: left; padding: 0 0 1em 1em }
 #attachment br { clear: left }
 .attachment #preview { margin-top: 1em }
 
