* Warn if there are files in the {{{projenv/plugins}}} directory, but setuptools is not installed.  * Register unicode -> bytestring converter for both "TEXT" and "text" columns when using PySQLite2.  * Make disabled form buttons visually distinct on Gecko browsers.  * Add a function to remove options to the {{{Configuration}}} class.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@2007 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -57,6 +57,12 @@ input[type=button], input[type=submit], input[type=reset] {
 input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover {
  background: #ccb;
 }
+input[type=button][disabled], input[type=submit][disabled],
+input[type=reset][disabled] {
+ background: #f6f6f6;
+ border-style: solid;
+ color: #999;
+}
 input[type=text], input.textwidget, textarea { border: 1px solid #d7d7d7 }
 input[type=text], input.textwidget { padding: .25em .5em }
 input[type=text]:focus, textarea:focus { border: 1px solid #886 }
