Reworked the search module. Components can now become searchable by implementing ISearchSource.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@2014 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/search.css
+++ b/htdocs/css/search.css
@@ -9,5 +9,4 @@
 #results dd { font-size: 80%; margin: 0; padding: 0 }
 #results .author, #results .date, #results .keywords { color: #090 }
 
-#paging { margin: 0 0 2em }
-#paging ul { text-align: left }
+#paging { margin: 0 0 2em; text-align: center }
