Many fixes for markup validation errors. Should close #1927.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@2183 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/browser.css
+++ b/htdocs/css/browser.css
@@ -51,8 +51,9 @@ h1 .sep { color: #666; padding: 0 .1em }
 #chglist td.change { 
  white-space: nowrap; 
 }
-#chglist td.change div { 
+#chglist td.change span { 
  border: 1px solid #999;
+ display: block;
  margin: .2em .5em 0 0;
  width: .8em; height: .8em;
 }
