Fix external link icon in IE/Win when the link text spans multiple lines. Closes #937.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@2184 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -43,11 +43,11 @@ h4 :link, h4 :visited, h5 :link, h5 :visited, h6 :link, h6 :visited {
 }
 
 @media screen {
- a.ext-link {
-  background: url(../extlink.gif) no-repeat 0 58%;
+ a.ext-link .icon {
+  background: url(../extlink.gif) left center no-repeat;
   padding-left: 16px;
  }
- * html a.ext-link { background-position: 0 .35em } /* IE hack, see #937 */
+ * html a.ext-link .icon { display: inline-block; }
 }
 
 /* Forms */
