Strip SilverCity's `*_default` class spans for all languages, not just Python, to prevent including an extraneous newline (fixes #2201)
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@2345 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/code.css
+++ b/htdocs/css/code.css
@@ -60,8 +60,7 @@ table.code tbody td {
 .image-file img { background: url(../imggrid.png) }
 
 /* Default */
-.css_default, .c_default, .code_default, .pl_default, .p_default, 
-.hphp_default, .yaml_default, .code-block span {
+.code-block span {
  font-family: monospace;
 }
 
