--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -257,7 +257,7 @@ label.disabled { color: #d7d7d7 }
 .wikipage { padding-left: 18px }
 .wikipage h1, .wikipage h2, .wikipage h3 { margin-left: -18px }
 
-a.missing:link, a.missing:visited { background: #fafaf0; color: #998 }
+a.missing:link, a.missing:visited, span.missing { background: #fafaf0; color: #998 }
 a.missing:hover { color: #000; }
 a.closed:link, a.closed:visited { text-decoration: line-through }
 
