Fixes for ticket queries:  * Use the configured label for custom ticket fields instead of the name (#2606).  * Adding filters in Safari now works correctly (#2459).  * Sorting works for unfiltered queries (#2706).
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@2890 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/report.css
+++ b/htdocs/css/report.css
@@ -35,7 +35,7 @@ h2 {
 .reports tbody td :link, .reports tbody td :visited,
 .tickets tbody td :link, .tickets tbody td :visited { display: block }
 .tickets { border-bottom: none }
-.tickets thead th { text-transform: capitalize }
+.tickets thead th { text-transform: capitalize; white-space: nowrap; }
 .tickets tbody td, .reports tbody td { padding: .1em .5em !important }
 .tickets tbody td a, .reports tbody td a { border-bottom: none }
 .tickets tbody td.id :link, .tickets tbody td.id :visited {
