The TracIni configuration options can now be defined in the Component that uses them, by implementing an `IConfigurable` interface.
This makes it possible to keep the documentation for the configuration options more accurate.
Now, the TracIni page can use a ![[TracIni]] macro to generate the up-to-date documentation.

Also, this makes it possible for plugins to document and provide default values for their configuration options.




git-svn-id: http://svn.edgewall.org/repos/trac/trunk@3055 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/about.css
+++ b/htdocs/css/about.css
@@ -6,16 +6,20 @@
 #content.about_config th {
  background: #f7f7f0;
  font-weight: bold;
- text-align: right;
+ text-align: left;
  vertical-align: top;
 }
-#content.about_config th.name, #content.about_config th.value {
- text-align: left;
+#content.about_config th.section {
+ text-align: right;
 }
 #content.about_config th, #content.about_config td {
  border: 1px solid #ddd;
  padding: 3px;
 }
+#content.about_config td.name { background:#f9f9f0; }
+#content.about_config td.value { background:#f9f9f0; font-weight: bold; }
+#content.about_config td.defaultvalue { font-family: monospace; background:#f9f9f0; }
+#content.about_config td.doc { padding: 3px 1em 3px 1em; }
 
 /* About plugins */
 #content.about_plugins h2 {
