TicketQuery now also shows the number of matches for each group.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@3104 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/report.css
+++ b/htdocs/css/report.css
@@ -1,6 +1,11 @@
 @import url(code.css);
 
-h1 .numrows { color: #999; font-size: 65%; font-weight: normal }
+h1 .numrows, h2 .numrows {
+ margin-left: 1em;
+ color: #999; 
+ font-size: 65%; 
+ font-weight: normal; 
+}
 h2 {
  background: #f7f7f7;
  border-bottom: 1px solid #d7d7d7;
