Fix h_cdata color, after a suggestion from Tim Hatch. Closes #2765
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@3134 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/code.css
+++ b/htdocs/css/code.css
@@ -127,7 +127,7 @@ table.code tbody td {
 .h_aspat { color: #ffdf00 }
 .h_attribute { color: teal }
 .h_attributeunknown { color: red }
-.h_cdata { color: #ffdf00 }
+.h_cdata { color: #373 }
 .h_entity { color: purple }
 .h_number { color: #099 }
 .h_other { color: purple }
