Don't show help elements when printing. Closes #3046.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@3177 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -383,6 +383,6 @@ div.system-message p.system-message-title { font-weight: bold; }
 }
 
 @media print {
- #header, #altlinks, #footer { display: none }
+ #header, #altlinks, #footer, #help { display: none }
  .nav, form, .buttons form { display: none }
 }
