Add an option to disable wiki formatting of changeset messages. Closes #2526.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@3246 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/changeset.css
+++ b/htdocs/css/changeset.css
@@ -23,7 +23,8 @@
  margin-top: 0;
 }
 #overview .message { padding: 1em 0 1px }
-#overview dd.message p, #overview dd.message ul, #overview dd.message ol {
+#overview dd.message p, #overview dd.message ul, #overview dd.message ol,
+#overview dd.message pre {
  margin-bottom: 1em;
  margin-top: 0;
 }
