TracRevisionLog and wiki history pages can now been printed. Thanks to Tim Hatch for pointing this out and for the initial patch. Fixes #3134
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@3284 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/browser.css
+++ b/htdocs/css/browser.css
@@ -79,7 +79,9 @@ tr.diff input {
 div.buttons {
  clear: left;
 }
-
+@media print { 
+  th.diff, td.diff { display: none }
+}
 /* Styles for the revision log table
    (extends the styles for "table.listing") */
 #chglist { margin-top: 0 }
