Added direct access to the list of attachments.
{{{
/attachment/<parent_type>/<parent_id>
}}}

At the same time, simplify the attachment related code
in the ticket and wiki module.


git-svn-id: http://svn.edgewall.org/repos/trac/trunk@3303 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -318,6 +318,13 @@ table.wiki td { border: 1px solid #ccc;  padding: .1em .25em; }
 #attachment br { clear: left }
 .attachment #preview { margin-top: 1em }
 
+/* Styles for the list of attachments. */
+#attachments { border: 1px outset #996; padding: 1em }
+#attachments .attachments { margin-left: 2em; padding: 0 }
+#attachments dt { display: list-item; list-style: square; }
+#attachments dd { font-style: italic; margin-left: 0; padding-left: 0; }
+
+
 /* Styles for tabular listings such as those used for displaying directory
    contents and report results. */
 table.listing {
