Introduced ''citation'' syntax for the Wiki, e-mail style. Each leading ">" character introduces a new level of citation.
This reuses most of the machinery introduced previously 
for a more robust handling of blockquotes. 

However, note that in the case of citations, the ''depth'' 
of a blockquote corresponds stricly to the number of leading
">" characters.




git-svn-id: http://svn.edgewall.org/repos/trac/trunk@3320 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -275,6 +275,15 @@ pre.wiki, pre.literal-block {
  padding: .25em;
  overflow: auto;
 }
+
+blockquote.citation { 
+ margin: 0;
+ border-style: solid; 
+ border-width: 0 0 0 2px; 
+ border-color: #b44; 
+ padding-left: .5em;
+}
+
 table.wiki {
  border: 2px solid #ccc;
  border-collapse: collapse;
