''Reply'' to ticket changes feature added.
 * Added ''permalinks'' to ticket changes, using the same look and feel
   as those for Wiki section headings.
   Note that those permalinks are now also visible when using IExplorer.
 * Added inlined ''Reply'' button for each permanent change;
   when ''replying'' to a change, the comment associated to the 
   replied-to change is simply copied and quoted in the comment
   textarea. A subsequent change is then recorded to have been
   ''in reply to'' the former change, enabling some kind of threading
   of the comments.
 * A permanent change correspond to a modification of the ticket;
   ticket changes due to attachments are qualified as non-permanent changes,
   as in the current way things work, this kind of change can come and go
   (e.g. when the attachment is replaced or deleted)
 * there's a new `comment:` link resolver:
   - referring to change `n` in the same ticket: `comment:n`
   - referring to change `m` in ticket `xyz`: `comment:ticket:xyz:`
     (similar to the `attachment:` link resolver)


git-svn-id: http://svn.edgewall.org/repos/trac/trunk@3364 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/ticket.css
+++ b/htdocs/css/ticket.css
@@ -46,6 +46,21 @@
  font-size: 100%;
  font-weight: normal;
 }
+.inlinebuttons input { 
+ float: right;
+ font-size: 70%;
+ border-width: 1px;
+ margin: 0 .5em .1em 1.5em;
+ padding: 0.1em;
+ background-color: #f6f6f6;
+}
+.inlinebuttons > input { /* rule ignored by IE */
+ visibility: hidden;
+}
+div.change:hover .inlinebuttons input {
+ visibility: visible;
+}
+
 #changelog .changes { list-style: square; margin-left: 2em; padding: 0 }
 #changelog .comment { margin-left: 2em }
 
