Minor layout change to ticket replies, floating links to the right.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@3373 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/ticket.css
+++ b/htdocs/css/ticket.css
@@ -46,6 +46,9 @@
  font-size: 100%;
  font-weight: normal;
 }
+#changelog .threading {
+	float: right;
+}
 .inlinebuttons input { 
  float: right;
  font-size: 70%;
