--- a/htdocs/css/timeline.css
+++ b/htdocs/css/timeline.css
@@ -45,6 +45,7 @@ dt.editedticket, dt.editedticket a { background-image: url(../editedticket.png) 
 dt.closedticket, dt.closedticket a { background-image: url(../closedticket.png) !important }
 dt.wiki, dt.wiki a { background-image: url(../wiki.png) !important }
 dt.milestone, dt.milestone a { background-image: url(../milestone.png) !important }
+dt.attachment, dt.attachment a { background-image: url(../attachment.png) !important }
 
 /* styles for the 'changeset_long_messages' option */
 dd.changeset p { margin: 0; padding: 0 }
