--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -321,7 +321,7 @@ table.wiki td { border: 1px solid #ccc;  padding: .1em .25em; }
  border: solid #d7d7d7;
  border-width: 1px 1px 1px 0;
  height: 18px;
- width: 156px;
+ width: 208px;
 }
 .wikitoolbar :link, .wikitoolbar :visited {
  background: transparent url(../edit_toolbar.png) no-repeat;
@@ -343,6 +343,8 @@ table.wiki td { border: 1px solid #ccc;  padding: .1em .25em; }
 .wikitoolbar a#link { background-position: 0 -48px }
 .wikitoolbar a#code { background-position: 0 -64px }
 .wikitoolbar a#hr { background-position: 0 -80px }
+.wikitoolbar a#np { background-position: 0 -96px }
+.wikitoolbar a#br { background-position: 0 -112px }
 
 /* Styles for the form for adding attachments. */
 #attachment .field { margin-top: 1.3em }
