When viewing an explicit version of a Wiki page, the version information is shown on top. This means the Wiki version shown by default (i.e. the latest version) will '''not''' have this version information and will be displayed the usual way.
This version information box is also used to preview the version change comment after a ''Preview''.

Closes #2646.

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@3476 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/browser.css
+++ b/htdocs/css/browser.css
@@ -108,20 +108,7 @@ div.buttons {
 
 #paging { margin: 1em 0 }
 
-/* Styles for the revision info in the file view */
-#info {
- background: #f7f7f0;
- border: 1px solid #d7d7d7;
- border-collapse: collapse;
- border-spacing: 0;
- clear: both;
- width: 100%;
-}
-#info th, #info td { font-size: 85%; padding: 2px .5em; vertical-align: top }
-#info th { font-weight: bold; text-align: left; white-space: nowrap }
-#info td.message { width: 100% }
-#info .message ul { padding: 0; margin: 0 2em }
-#info .message p { margin: 0; padding: 0 }
+/* Styles for the revision info in the file view (see also trac.css) */
 #info .props {
  color: #666;
  list-style: square;
