--- a/htdocs/css/diff.css
+++ b/htdocs/css/diff.css
@@ -17,6 +17,13 @@
 }
 #overview dd { margin-left: 8em }
 
+#overview .message { padding: 1em 0 1px }
+#overview dd.message p, #overview dd.message ul, #overview dd.message ol,
+#overview dd.message pre {
+ margin-bottom: 1em;
+ margin-top: 0;
+}
+
 /* Colors for change types */
 #chglist .edit, #overview .mod, .diff #legend .mod { background: #fd8 }
 #chglist .delete, #overview .rem, .diff #legend .rem { background: #f88 }
