Added info panel for the attachment view, similar to the file info panel in TracBrowser.
Also added the file size to the attachment and file info panel.

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@3492 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/browser.css
+++ b/htdocs/css/browser.css
@@ -109,6 +109,7 @@ div.buttons {
 #paging { margin: 1em 0 }
 
 /* Styles for the revision info in the file view (see also trac.css) */
+#info { margin: 0; }
 #info .props {
  color: #666;
  list-style: square;
